add missing authentication check on edit comment
