# backend/swagger.json
@@ -871,6 +871,11 @@
         }
       },
       "post": {
+        "security": [
+          {
+            "Bearer": []
+          }
+        ],
         "tags": [
           "article"
         ],
